@@ -30,6 +30,7 @@
 #include "main/presetup.h"
 #include "main/game_info.h"
 #include "main/speedrunner.h"
+#include "main/translate.h"
 #include "compat.h"
 #include "controls.h"
 #include <AppPath/app_path.h>
@@ -338,7 +339,8 @@ int main(int argc, char**argv)
                                                    "  always - Blink effect will work always\n"
                                                    "  never - Disable blink effect completely",
                                                     false, "undefined",
-                                                   "opaque, always, never");
+                                                   "opaque, always, never",
+                                                    cmd);
         TCLAP::SwitchArg switchDisplayControls(std::string(), "show-controls", "Display current controller state while the game process", false);
         TCLAP::ValueArg<unsigned int> showBatteryStatus(std::string(), "show-battery-status",
                                                    "Display the battery status indicator (if available):\n"
@@ -350,6 +352,9 @@ int main(int argc, char**argv)
                                                     false, 0u,
                                                    "0, 1, 2, 3, or 4",
                                                    cmd);
+
+        TCLAP::SwitchArg switchMakeLangTemplate(std::string(), "export-lang", "Exports the default language template", false);
+        TCLAP::ValueArg<std::string> lang(std::string(), "lang", "Set the engine's language by code", false, "", "en, ru, zh-cn, etc.");
 
         TCLAP::SwitchArg switchVerboseLog(std::string(), "verbose", "Enable log output into the terminal", false);
 
@@ -372,10 +377,11 @@ int main(int argc, char**argv)
         cmd.add(&switchVerboseLog);
         cmd.add(&switchSpeedRunSemiTransparent);
         cmd.add(&switchDisplayControls);
+        cmd.add(&switchMakeLangTemplate);
+        cmd.add(&lang);
         cmd.add(&inputFileNames);
 
         cmd.parse(argc, argv);
-
 
         // Initialize the assets and user paths
         {
@@ -390,6 +396,14 @@ int main(int argc, char**argv)
 
             AppPathManager::initAppPath();
             AppPath = AppPathManager::assetsRoot();
+        }
+
+        if(switchMakeLangTemplate.isSet() && switchMakeLangTemplate.getValue())
+        {
+            initGameInfo();
+            XTechTranslate translate;
+            translate.exportTemplate();
+            return 0;
         }
 
         OpenConfig_preSetup();
@@ -427,7 +441,7 @@ int main(int argc, char**argv)
                 return 2;
             }
 #ifdef DEBUG_BUILD
-            std::cerr << "Manually selected renderer:" << rt << " - " << setup.renderType << std::endl;
+            std::cerr << "Manually selected renderer: " << rt << " - " << setup.renderType << std::endl;
             std::cerr.flush();
 #endif
         }
@@ -539,6 +553,15 @@ int main(int argc, char**argv)
         {
             setup.testShowFPS = true;
             setup.neverPause = true;
+        }
+
+        if(lang.isSet())
+        {
+            CurrentLanguage = lang.getValue();
+#ifdef DEBUG_BUILD
+            std::cerr << "Debug: Manually selected language: " << CurrentLanguage << std::endl;
+            std::cerr.flush();
+#endif
         }
     }
     catch(TCLAP::ArgException &e)   // catch any exceptions
